--- a/CSS/AnimeGem1.css
+++ b/CSS/AnimeGem1.css
@@ -29,6 +29,20 @@ body {
     left: 10px; 
 }
 
+#style-toggle {
+    background-color: #F96060;
+    color: black;
+    padding: 10px 20px;
+    width: 200px;
+    margin: 0 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 100px;
+    position: absolute; 
+    bottom: 120px; 
+    left: 10px;
+}
+
 /* --- Style de l'en-tête --- */
 header {
     font-family: Inter, sans-serif;
@@ -69,7 +83,9 @@ h1 {
 /* --- Section des thèmes --- */
 .themes {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 48px;
     padding: 20px;
 }
@@ -186,14 +202,13 @@ body.dark-theme .ajouteraupanier {
 
 /* --- Total du panier --- */
 #totalPanier {
-    position: fixed;
-    top: 125px;
-    right: 140px;
+    position: relative;
     background-color: #F96060;
     color: black;
     padding: 15px;
     border-radius: 50px;
     text-align: center;
+    max-width: 200px;
 }
   
 #totalPanier #prixTotal {
